fix bold text in snippet